--- a/style.css
+++ b/style.css
@@ -2,23 +2,35 @@
     margin: 0;
     padding: 0;
     font-size: 100%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 main {
     height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.header {
+header {
     min-height: 50px;
-    background-color: beige;
+    background-color: rgba(0, 0, 0, 0.3);
     width: 100%;
     position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header .announcement-span {
+    text-align: center;
+    font-size: 120%;
+    color: red;
 }
 
 .play-field {
+    position: relative;
     display: flex;
     align-content: center;
     justify-content: center;
@@ -81,4 +93,50 @@ main {
 
 .play-box {
     background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 200%;
+}
+
+.blocker {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    align-self: center;
+    justify-self: center;
+    visibility: hidden;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.show {
+    z-index: 1;
+    visibility: visible;
+    animation: fadeIn 1s;
+}
+
+@-webkit-keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+  
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+}
+
+.rematch-btn {
+    align-self: center;
+    padding: 1rem;
+}
+
+.red {
+    color: red;
+}
+
+.blue {
+    color: blue;
 }
